# mobile-ALOHA-lift

act-lift/: constants.py  imitate_episodes.py  policy.py  utils.py  visualize_episodes.py
act-lift/checkpoints/: dataset_stats.pkl
act-lift/detr/: main.py
act-lift/detr/models/: backbone.py  detr_vae.py  position_encoding.py  transformer.py
act_real_output/: episode_000000_action.csv  episode_000001_action.csv  episode_000002_action.csv  episode_000003_action.csv  episode_000004_action.csv  episode_000005_action.csv  episode_000006_action.csv  episode_000007_action.csv  episode_000008_action.csv  episode_000009_action.csv
aloha-lift/: CMakeLists.txt  package.xml  setup.py
aloha-lift/aloha_scripts/: __init__.py  constants.py  deploy_act.py  real_env.py  record_episodes.py  replay_episodes.py  robot_utils.py  sleep.py  visualize_episodes.py
aloha-lift/config/: puppet_modes.yaml
aloha-lift/launch/: lift_teleop.launch
mobile-aloha-lift/aloha_scripts/: constants.py  preprocess_lift.py  train_lift.py
