<?xml version="1.0"?>
<package format="2">
  <name>aloha_lift</name>
  <version>0.1.0</version>
  <description>ALOHA deployment package adapted for act-lift (lift-axis control only)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>interbotix_xs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>usb_cam</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
